fixed spacing on large screen directions form

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -8,11 +8,11 @@ $separator:#338DCD;
  body {
     background-color: $background;
     font-family: "Open Sans";
-     color: $text;
-     h3, h4, h5, h6 {
-     text-align: center;
-         color: #888;
-     }
+    color: $text;
+    h3, h4, h5, h6 {
+        text-align: center;
+        color: #888;
+    }
 }
 //Navbar Styling
 nav {
@@ -115,18 +115,17 @@ button:visited {
 }
 .filterForm {
     margin: 2em 0em 2em 0em;
-    input{
-    border-radius: 0.3em;
+    input {
+        border-radius: 0.3em;
         display: inline-block;
     }
     label {
-    color: #888;
+        color: #888;
         display: inline-block;
         padding: 0.2em;
-        
     }
     #dollaz {
-    color: #888;
+        color: #888;
     }
 }
 @media (min-width: 768px) {
@@ -144,6 +143,11 @@ button:visited {
     }
     .row {
         width: 100%;
+    }
+    #directions {
+        input, button {
+            margin-top: 0.5em;
+        }
     }
     #map-canvas {
         border-left: 0.2em solid $separator;
